--- a/packages/make-hardener/package.json
+++ b/packages/make-hardener/package.json
@@ -25,8 +25,13 @@
     "test": "test"
   },
   "type": "module",
-  "main": "./src/main.js",
-  "browser": "dist/make-hardener.umd.js",
+  "main": "./dist/make-hardener.cjs",
+  "browser": "./dist/make-hardener.umd.js",
+  "exports": {
+    "import": "./src/main.js",
+    "require": "./dist/make-hardener.cjs",
+    "browser": "./dist/make-hardener.umd.js"
+  },
   "scripts": {
     "depcheck": "depcheck",
     "lint": "eslint '**/*.js'",
