--- a/packages/make-hardener/package.json
+++ b/packages/make-hardener/package.json
@@ -40,6 +40,7 @@
     "build": "rollup -c rollup.config.js"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^6.1.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
@@ -49,7 +50,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "prettier": "^1.19.1",
     "rollup": "1.31.0",
-    "rollup-plugin-node-resolve": "5.2.0",
+    "rollup-plugin-terser": "^5.1.3",
     "tap": "14.10.5"
   }
 }
